# algotrading

./: .gitattributes  .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  OPTIMIZATION_SUMMARY.md  PERFORMANCE_ACHIEVED.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_FINAL.md  PERFORMANCE_OPTIMIZATION.md  PERFORMANCE_REFACTORING.md  PERFORMANCE_SUMMARY.md  README.md  dbeq-basic-20240403.mbo.dbn.zst
benches/: backtest_performance.rs  optimized_throughput.rs  performance_focused.rs  simple_throughput.rs  system_performance.rs  throughput_benchmark.rs  throughput_simple.rs  zero_copy_performance.rs
benchmarks/: backtest_performance_comparison.rs  optimized_backtest.rs  optimized_performance_test.rs  performance_final_test.rs  profile_backtest.rs  realistic_performance.rs  serial_backtest_benchmark.rs  simple_performance.rs  strategy_backtest_benchmark.rs
docs/: BACKTESTING_ARCHITECTURE.md  BACKTESTING_PROGRESS.md  FEATURE_ADDITIONS_SUMMARY.md  FEATURE_ANALYSIS.md  IMPLEMENTATION_PLAN.md  REAL_DATA_BENCHMARKS.md  TRADING_STRATEGIES.md  feature_extraction.md  mbo_flags_snippet.txt
examples/: ml_strategy_demo.rs
python_ml/: model_metadata.json  pyproject.toml  python_strategy_example.py  trading_model.joblib  train_model.py
src/: Rust.code-workspace  backtest.rs  features.rs  lib.rs  lob.rs  main.rs  metrics.rs  strategy.rs  verify.rs
test_data/: README.md  condition.json  glbx-mdp3-20250501.mbo.dbn.zst  glbx-mdp3-20250502.mbo.dbn.zst  glbx-mdp3-20250505.mbo.dbn.zst  metadata.json  symbology.json
tests/: backtest.rs  features.rs  lob.rs  metrics.rs  snapshot.rs  (+1 more)
(+58 files in other folders)
