[package]
name = "algotrading"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4"
crossbeam-channel = "0.5.15"
databento = "0.26.1"
hashbrown = { version = "0.15.3", features = ["rayon"] }
memmap2 = "0.9.5"
smallvec = "1.15.0"
time = "0.3.41"
tokio = {"version" = "1.45.1", "features"= ["rt-multi-thread"]}

# Python integration
pyo3 = { version = "0.22", features = ["auto-initialize"] }
numpy = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num_cpus = "1.17.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "system_performance"
harness = false
