[package]
name = "algotrading"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
crossbeam-channel = "0.5.15"
databento = "0.26.2"
dotenvy = "0.15.7"
hashbrown = "0.15.3"
memmap2 = "0.9.5"
serde_json = "1.0.140"
smallvec = "1.15.0"
time = { version = "0.3.41", features = ["macros"] }
tokio = { version = "1.45.1", features = ["full"] }
